--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -39,6 +39,10 @@
     color: #feb236;
 }
 
+.projects-top-phone {
+    margin-top: 12%;
+}
+
 
 .pcol div,div h2 a,p {
     padding: 2%;
